# FHE-House-Price-Predictions

./: LICENSE  README.md
app/: CMakeLists.txt  Regression_model.py  main.cpp  result.json  yourSolution.cpp  yourSolution.h
app/model/: regression_weights.json  regression_weights.pkl  scaler.pkl
